--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "release": "release-it"
   },
   "husky": {
-    "hooks": {
-    }
+    "hooks": {}
   },
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -60,5 +59,8 @@
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
+  },
+  "dependencies": {
+    "dom-iterator": "^1.0.0"
   }
 }
